[package]
name = "rust-lox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "env", "wrap_help"] }
macro_pub = "0.1.0"
itertools = { version = "0.14.0", optional = true }

[features]
nightly = ["dep:itertools"]

[build-dependencies]
rustversion = "1.0.20"
